# SmartCredentials-SDK-android

./: CHANGELOG  CODING-STANDARDS.md  CONTRIBUTING.md  LICENSING  NOTICE  README.md  USAGE-PUSH-NOTIFICATIONS-MODULE.md  fileheader.txt
.github/workflows/: build.yaml  codeql-analysis.yml  manual.yml  release.yaml  samples.yaml
SmartCredentials_aOS/: .gitignore  build.gradle  gradle.properties  gradlew  settings.gradle
SmartCredentials_aOS/ausweisapp2aar/: AndroidManifest.xml  README.md  ausweisapp-1.22.7.pom  build.gradle  gradle.properties
SmartCredentials_aOS/authentication/: README.md  build.gradle
SmartCredentials_aOS/authorization/: README.md  build.gradle  proguard-rules.pro
SmartCredentials_aOS/camera/: README.md  build.gradle  proguard-rules.pro
SmartCredentials_aOS/core/: README.md  build.gradle  proguard-rules.pro
SmartCredentials_aOS/documentscanner/: README.md  build.gradle  proguard-rules.pro
SmartCredentials_aOS/eid/: README.md  build.gradle  proguard-rules.pro
SmartCredentials_aOS/identityprovider/: README.md  build.gradle
SmartCredentials_aOS/networking/: build.gradle  proguard-rules.pro
SmartCredentials_aOS/oneclickbusinessclient/: README.md  build.gradle
SmartCredentials_aOS/otp/: README.md  build.gradle  proguard-rules.pro
SmartCredentials_aOS/persistentlogging/: build.gradle
SmartCredentials_aOS/pmc/: build.gradle
SmartCredentials_aOS/pushnotifications/: README.md  build.gradle
SmartCredentials_aOS/security/src/main/jni/: Android.mk  CMakeLists.txt  repo_alias.cpp  repo_alias.h
SmartCredentials_aOS/storage/: README.md  (+2 more)
(+1453 files in other folders)
